# esolangs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cell-based/: RAM0.py  ascii-art.py  back.py  circlefuck.py  dig.py  dotlang.py  huf.py  polynomial.py
cell-based/examples/: ascii-art.txt  suffolk.txt
compilers/: assembly
compilers/assembly/: bfstack.py  home-row.py  jaune.py  suffolk.py  unsquare.py
compilers/c/: RAM0.c  bf-pda.c  bfstack.c  excon.c
deque-based/: bitdeque.py
docs/: laserfuck.txt  lightlang.txt
examples/hello_world/: huf_hello.huf  huf_math.huf  huf_simple.huf
extra/: 3x.rb  74.lean  74.rb  albabet.lean  bit.rb  brainpocalypse.asm  excon.r  stun-step.asm
extra/assembly/: 123.asm  2b1b.asm  brainpocalypse.asm  nocomment.asm  stun-step.asm
extra/c++/: %^2^-1.cpp  2dFish.cpp  Painfuck.cpp  basicfuck.cpp  dimensional.cpp  forþ.cpp  kak.cpp  painfuck.cpp  trash.cpp
extra/c++/common/: Tape.cpp  Tape.h  TapeCell.cpp  TapeCell.h
extra/lean/: 74.lean  albabet.lean  bf-pda.lean  excon.lean
extra/r/: excon.r
extra/ruby/: 3x.rb  74.rb  bit.rb  unsquare.rb
extra/rust/: Cargo.toml  laserfuck.rs  unsquare.rs
miscellaneous/: ascii-art.txt  binary.py  generate.py  lightlang.txt  mammalian.txt  stackgen.py  suffolk.txt
other/: bitdeque.py  clockwise.py  container.py  keys.py  metabox.py  nevermind.py  ztoalc.py
register-based/: RAM0.py  WII2D.py  bio.py  dig.py  dotlang.py  dsdlai.py  huf.py  lightlang.py  minsky-swap.py  movesum.py  polynomial.py  qoibl.py  sophie.py
register-based/examples/: lightlang.txt
src/esolangs/compilers/assembly/: home-row.py  jaune.py  suffolk.py
src/esolangs/compilers/c/: RAM0.c  bfstack.c  excon.c
src/esolangs/interpreters/other/: nevermind.py
src/esolangs/interpreters/register_based/: RAM0.py  WII2D.py  bio.py  dig.py  dotlang.py  dsdlai.py  huf.py  lightlang.py  minsky-swap.py  movesum.py  polynomial.py  qoibl.py  sophie.py
src/esolangs/interpreters/stack_based/: bfstack.py  eval.py  modulous.py
src/esolangs/interpreters/tape_based/: ascii-art.py  back.py  circlefuck.py
stack-based/: bfstack.py  eval.py  modulous.py  temporary.py  the-temporary-stack.py
tape-based/: 6-5.py  ascii-art.py  back.py  brainif.py  circlefuck.py  excon.py  mammalian.py  minifuck.py  suffolk.py
tests/interpreters/: test_bio.py  test_dig.py  test_dotlang.py  test_dsdlai.py  test_huf.py  test_lightlang.py  test_minsky_swap.py  test_movesum.py  test_polynomial.py  test_qoibl.py  test_ram0.py  test_sophie.py  test_wii2d.py
